# Tech65

./: .gitignore  README.md  pyproject.toml
week01/: quiz01.ipynb
week02/: quiz02.ipynb  week02.ipynb
