[project]
name = "tech65"
version = "0.1.0"
description = "Tech 65 Virtual Enviornment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
	"missingno>=0.5.2",
	"openpyxl>=3.1.3",
]
